# nuttx

./: .gitignore  AUTHORS  Android.bp  CMakeLists.txt  Kconfig  LICENSE
.github/workflows/: build.yml
Documentation/: index.rst
Documentation/guides/: index.rst
Documentation/quickstart/: install.rst
Documentation/standards/: posix.rst
arch/: CMakeLists.txt  Kconfig
arch/arm/: Kconfig
arch/arm64/: Kconfig
arch/avr/: Kconfig
arch/risc-v/: Kconfig
arch/sim/: CMakeLists.txt  Kconfig
arch/sparc/: Kconfig
arch/tricore/: Kconfig
arch/x86_64/: Kconfig
arch/xtensa/: Kconfig
audio/: audio.c
binfmt/: CMakeLists.txt  Kconfig  Makefile  binfmt.h  binfmt_copyattr.c  binfmt_exec.c  binfmt_execmodule.c  binfmt_globals.c  binfmt_loadmodule.c  builtin.c  elf.c  elf_fixup.c  nxflat.c
binfmt/libelf/: libelf_init.c
boards/: Board.mk  Kconfig  boardctl.c
boards/xtensa/iss-hifi4/iss-hifi4/: CMakeLists.txt
boards/xtensa/iss-hifi4/iss-hifi4/configs/nsh/: defconfig
cmake/: menuconfig.cmake  nuttx_add_application.cmake  nuttx_add_library.cmake  nuttx_add_romfs.cmake  nuttx_extensions.cmake  nuttx_generate_dts.cmake  nuttx_generate_outputs.cmake  nuttx_kconfig.cmake  nuttx_merge_protected_elf.cmake  nuttx_mkconfig.cmake  nuttx_mkversion.cmake  nuttx_multiple_link.cmake  nuttx_overrides.cmake  nuttx_process_config.cmake  nuttx_protected_symbol_share.cmake  nuttx_remove_lines.cmake  nuttx_syscall_utils.cmake  nuttx_toolchain.cmake  savedefconfig.cmake
crypto/: CMakeLists.txt  Makefile  bn.c  crypto.c  cryptodev.c  cryptosoft.c  rijndael.c  xform.c
devicetree/: Kconfig
devicetree/arm/: armv7-m.dtsi
devicetree/common/: empty_file.c  freq.h  mem.h
drivers/: Kconfig  Makefile  drivers_initialize.c
drivers/aie/: CMakeLists.txt  Kconfig  Make.defs  ai_engine.c
drivers/analog/: adc.c  comp.c  dac.c  opamp.c
drivers/audio/: CMakeLists.txt  Kconfig  Make.defs  audio_dma.c  audio_fake.c  audio_rpmsg.c  audio_tunnel.c  cs4344.c  cs43l22.c  es8311.c  es8388.c  tone.c  vs1053.c  wm8904.c  wm8994.c
drivers/bch/: bchdev_driver.c  bchlib_ioctl.c  bchlib_write.c
drivers/binder/: Kconfig  binder.c  binder_alloc.c  binder_internal.h  binder_node.c  binder_ref.c  binder_sched.c  binder_thread.c  binder_trans.c
drivers/can/: CMakeLists.txt  Kconfig  Make.defs  can.c  can_sender.c  ctucanfd.h  ctucanfd_pci.c  kvaser_pci.c  mcp2515.c  vcan.c
drivers/clk/: clk.c
drivers/coresight/: CMakeLists.txt  Kconfig  Make.defs  coresight_core.c  coresight_etb.c  coresight_etm4.c  coresight_funnel.c  coresight_itm.c  coresight_replicator.c  coresight_tmc_etf.c  coresight_tmc_etr.c
drivers/cpufreq/: Kconfig  cpufreq_internal.h  qos.c  (+2 more)
drivers/note/: CMakeLists.txt  Kconfig  Make.defs  note_driver.c  note_driver.h  note_initialize.c  notectl_driver.c  noteitm_driver.c  notelog_driver.c  noteram_driver.c  noterpmsg_driver.c  noterpmsg_server.c  notesnap_driver.c  notestream_driver.c
fs/: CMakeLists.txt  Kconfig  Makefile  fs_heap.c  fs_heap.h  fs_initialize.c
include/: aio.h  alloca.h  assert.h  ctype.h  debug.h  dirent.h  elf.h  execinfo.h  fcntl.h  gcov.h  langinfo.h  limits.h  locale.h  lzf.h  malloc.h  mqueue.h  netdb.h  nl_types.h  pthread.h  regex.h  sched.h  search.h  semaphore.h  signal.h  spawn.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  syscall.h  syslog.h  time.h  unistd.h  utime.h
mm/: Kconfig  Makefile
net/: Kconfig  Makefile  net_initialize.c
openamp/: libmetal.cmake  open-amp.cmake  open-amp.defs
pass1/: Makefile
sched/: Kconfig  Makefile
syscall/: CMakeLists.txt  Kconfig  Makefile  syscall.csv  syscall_names.c  syscall_stublookup.c  syscall_wraps.h
tools/: CMakeLists.txt  Config.mk  Directories.mk  FlatLibs.mk  KernelLibs.mk  Makefile.host  ProtectedLibs.mk  Unix.mk  abi_check.py  abi_replace.sh  build.sh  cfgdefine.c  checkelf.py  checkkconfig.py  checkpatch.sh  checkversion.py  configure.bat  configure.sh  coredump.py  csvparser.h  elf_fixup.py  gcov.py  gdbserver.py  gsmmux.py  jlink-nuttx.c  minidumpserver.py  mkexport.sh  mknotetype.py  mksyscall.c  noteinfo.c  nxstyle.c  parsememdump.py  parsetrace.py  refresh.sh  rpmsg_protocal.lua  sethost.sh  symbolprefix.sh  symbolshare.py  wrapsymbol.c
(+4195 files in other folders)
